[gd_scene load_steps=17 format=3 uid="uid://7oe4k7kkscol"]

[ext_resource type="Script" path="res://scenes/levels/level.gd" id="1_o0h58"]
[ext_resource type="Texture2D" uid="uid://dtylmbxq5saf7" path="res://graphics/ground/stones.png" id="2_5nory"]
[ext_resource type="PackedScene" uid="uid://djipbowm2i22w" path="res://scenes/objects/gate.tscn" id="3_belet"]
[ext_resource type="Texture2D" uid="uid://cudym074w3kq" path="res://graphics/decals/dirt_patch.png" id="3_kbdgq"]
[ext_resource type="PackedScene" uid="uid://ktsbv48oxj5l" path="res://scenes/player/player.tscn" id="4_8t4p4"]
[ext_resource type="PackedScene" uid="uid://dcx1j46pfxbq0" path="res://scenes/houses/house.tscn" id="5_ctehp"]
[ext_resource type="PackedScene" uid="uid://27u8hpyede63" path="res://scenes/objects/steam_vent.tscn" id="6_2gdpj"]
[ext_resource type="Texture2D" uid="uid://behhs33aw808h" path="res://graphics/decals/moss/moss_1.png" id="6_k7ndh"]
[ext_resource type="Texture2D" uid="uid://c45kgxujw0f4u" path="res://graphics/decals/moss/moss_3.png" id="7_o2jfq"]
[ext_resource type="Texture2D" uid="uid://bwujf7v3e340q" path="res://graphics/decals/moss/moss_5.png" id="8_4be6f"]
[ext_resource type="Texture2D" uid="uid://d2v4nj2s0tdcx" path="res://graphics/tilesets/outside_walls.png" id="8_rn3af"]
[ext_resource type="Texture2D" uid="uid://boohjb51plh6h" path="res://graphics/decals/moss/moss_2.png" id="9_lqt0k"]
[ext_resource type="Texture2D" uid="uid://gx4eekmxyn7c" path="res://graphics/tilesets/soil.png" id="9_s2hbs"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bd1im"]
resource_name = "walls"
texture = ExtResource("8_rn3af")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-65, -65, -65, 65, 195, 65, 195, -65)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(195, 65, 195, -65, -195, -65, -195, 65)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(65, 65, 65, -65, -195, -65, -195, 65)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(65, -65, -65, -65, -65, 195, 65, 195)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(195, 65, 195, -65, -65, -65, -65, 195, 65, 195, 65, 65)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-65, 195, 65, 195, 65, -65, -195, -65, -195, 65, -65, 65)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-65, 195, 65, 195, 65, -195, -65, -195)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(65, -195, -65, -195, -65, 65, 195, 65, 195, -65, 65, -65)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-195, -65, -195, 65, 65, 65, 65, -195, -65, -195, -65, -65)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-65, 65, 65, 65, 65, -195, -65, -195)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bmkxh"]
resource_name = "soil"
texture = ExtResource("9_s2hbs")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_rkeia"]
tile_size = Vector2i(390, 390)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 11
sources/0 = SubResource("TileSetAtlasSource_bd1im")
sources/1 = SubResource("TileSetAtlasSource_bmkxh")

[node name="Level" type="Node2D"]
script = ExtResource("1_o0h58")

[node name="Ground" type="Node2D" parent="."]

[node name="Soil" type="Sprite2D" parent="Ground"]
texture_repeat = 2
position = Vector2(603, 840)
scale = Vector2(0.99435, 1)
texture = ExtResource("2_5nory")
region_enabled = true
region_rect = Rect2(-2637.09, -1192.53, 16000, 10000)

[node name="TileMap" type="TileMap" parent="Ground"]
tile_set = SubResource("TileSet_rkeia")
format = 2
layer_0/name = "Soil"
layer_0/tile_data = PackedInt32Array(-65542, 65537, 1, -65541, 65537, 1, -65540, 65537, 1, -65539, 65537, 1, -6, 65537, 2, -5, 65537, 2, -4, 65537, 2, -3, 65537, 2, -65543, 65537, 1, -7, 65537, 2, -131081, 65537, 1, -131082, 65537, 1, -131080, 65537, 1, -196618, 65537, 1, -196617, 65537, 1, -196616, 65537, 1, -196615, 65537, 1, -196614, 65537, 1, -196613, 65537, 1, -196612, 65537, 1, -196611, 65537, 1, -131075, 65537, 1, -131076, 65537, 1, -131077, 65537, 1, -131078, 65537, 1, -131079, 65537, 1, -65538, 65537, 1, -10, 1, 2, -9, 65537, 2, -8, 65537, 2, -65546, 1, 1, -65545, 65537, 1, -65544, 65537, 1, -196610, 65537, 1, -196609, 65537, 1, -262144, 65537, 1, -262143, 65537, 1, -262142, 65537, 1, -262141, 65537, 1, -262140, 65537, 1, -262139, 65537, 1, -262138, 65537, 1, -262137, 65537, 1, -262136, 65537, 1, -262135, 65537, 1, -262134, 65537, 1, -196598, 65537, 1, -196597, 65537, 1, -196596, 65537, 1, -262132, 65537, 1, -262133, 65537, 1, -196603, 65537, 1, -196602, 65537, 1, -196601, 65537, 1, -196600, 65537, 1, -196599, 65537, 1, -131067, 65537, 1, -131066, 65537, 1, -131065, 65537, 1, -131064, 65537, 1, -131063, 65537, 1, -131062, 65537, 1, -131061, 65537, 1, -131060, 65537, 1, -65528, 65537, 2, -65529, 65537, 2, -65527, 65537, 2, -65526, 131073, 2, -65530, 1, 2, -131059, 65537, 1, -65523, 1, 1, 13, 1, 1, 65549, 1, 1, 131085, 1, 1, 196621, 1, 1, 262157, 1, 1, 327693, 1, 1, 393229, 1, 1, 393230, 65537, 1, 393231, 65537, 1, 393232, 65537, 1, 393233, 65537, 1, 393234, 65537, 1, 393235, 65537, 1, 393236, 65537, 1, 327700, 65537, 1, 262164, 65537, 1, 196628, 65537, 1, 131092, 65537, 1, 65556, 65537, 1, 20, 65537, 1, -65516, 65537, 1, -131052, 65537, 1, -196588, 65537, 1, -262124, 65537, 1, -327660, 65537, 1, -393196, 65537, 1, -458732, 65537, 1, -524268, 65537, 1, -524269, 65537, 1, -524270, 65537, 1, -524271, 65537, 1, -524272, 65537, 1, -524273, 65537, 1, -524274, 65537, 1, -524275, 65537, 1, -524276, 65537, 1, -524277, 65537, 1, -589813, 65537, 1, -589814, 65537, 1, -589815, 65537, 1, -589816, 65537, 1, -589817, 65537, 1, -589818, 65537, 1, -589819, 65537, 1, -589820, 65537, 1, -589821, 65537, 1, -589822, 65537, 1, -524286, 65537, 1, -524287, 65537, 1, -524288, 65537, 1, -458753, 65537, 1, -458754, 65537, 1, -458755, 65537, 1, -458756, 65537, 1, -458757, 65537, 1, -524293, 65537, 1, -524294, 65537, 1, -524295, 65537, 1, -524296, 65537, 1, -524297, 65537, 1, -524298, 65537, 1, -458762, 65537, 1, -393226, 65537, 1, -327690, 65537, 1, -262154, 65537, 1, -262126, 65537, 1, -327662, 65537, 1, -393198, 65537, 1, -458734, 65537, 1, -458735, 65537, 1, -458736, 65537, 1, -458737, 65537, 1, -458738, 65537, 1, -458739, 65537, 1, -458740, 65537, 1, -458741, 65537, 1, -458742, 65537, 1, -524278, 65537, 1, -524279, 65537, 1, -524280, 65537, 1, -524281, 65537, 1, -524282, 65537, 1, -524283, 65537, 1, -524284, 65537, 1, -524285, 65537, 1, -458749, 65537, 1, -458750, 65537, 1, -458751, 65537, 1, -458752, 65537, 1, -393217, 65537, 1, -393218, 65537, 1, -393219, 65537, 1, -393220, 65537, 1, -393221, 65537, 1, -393222, 65537, 1, -458758, 65537, 1, -458759, 65537, 1, -458760, 65537, 1, -458761, 65537, 1, -393225, 65537, 1, -327689, 65537, 1, -262153, 65537, 1, -262152, 65537, 1, -327688, 65537, 1, -393224, 65537, 1, -393223, 65537, 1, -327687, 65537, 1, -262151, 65537, 1, -262150, 65537, 1, -327686, 65537, 1, -327685, 65537, 1, -262149, 65537, 1, -262148, 65537, 1, -327684, 65537, 1, -327683, 65537, 1, -262147, 65537, 1, -262146, 65537, 1, -327682, 65537, 1, -327681, 65537, 1, -262145, 65537, 1, -327680, 65537, 1, -393216, 65537, 1, -393215, 65537, 1, -327679, 65537, 1, -327678, 65537, 1, -393214, 65537, 1, -393213, 65537, 1, -327677, 65537, 1, -327676, 65537, 1, -393212, 65537, 1, -458748, 65537, 1, -458747, 65537, 1, -393211, 65537, 1, -327675, 65537, 1, -327674, 65537, 1, -393210, 65537, 1, -458746, 65537, 1, -458745, 65537, 1, -393209, 65537, 1, -327673, 65537, 1, -327672, 65537, 1, -393208, 65537, 1, -458744, 65537, 1, -458743, 65537, 1, -393207, 65537, 1, -327671, 65537, 1, -327670, 65537, 1, -393206, 65537, 1, -393205, 65537, 1, -327669, 65537, 1, -327668, 65537, 1, -393204, 65537, 1, -393203, 65537, 1, -327667, 65537, 1, -262131, 65537, 1, -196595, 65537, 1, -196594, 65537, 1, -262130, 65537, 1, -327666, 65537, 1, -393202, 65537, 1, -393201, 65537, 1, -327665, 65537, 1, -262129, 65537, 1, -196593, 65537, 1, -131057, 65537, 1, -131058, 65537, 1, -65522, 65537, 1, 14, 65537, 1, 65550, 65537, 1, 131086, 65537, 1, 196622, 65537, 1, 262158, 65537, 1, 327694, 65537, 1, 327695, 65537, 1, 262159, 65537, 1, 196623, 65537, 1, 131087, 65537, 1, 65551, 65537, 1, 15, 65537, 1, -65521, 65537, 1, -65520, 65537, 1, -131056, 65537, 1, -196592, 65537, 1, -262128, 65537, 1, -327664, 65537, 1, -393200, 65537, 1, -393199, 65537, 1, -327663, 65537, 1, -262127, 65537, 1, -196591, 65537, 1, -131055, 65537, 1, -65519, 65537, 1, 17, 65537, 1, 16, 65537, 1, 65552, 65537, 1, 131088, 65537, 1, 196624, 65537, 1, 262160, 65537, 1, 327696, 65537, 1, 327697, 65537, 1, 262161, 65537, 1, 196625, 65537, 1, 131089, 65537, 1, 65553, 65537, 1, 65554, 65537, 1, 18, 65537, 1, -65518, 65537, 1, -131054, 65537, 1, -196590, 65537, 1, -196589, 65537, 1, -262125, 65537, 1, -327661, 65537, 1, -393197, 65537, 1, -458733, 65537, 1, -131053, 65537, 1, -65517, 65537, 1, 19, 65537, 1, 65555, 65537, 1, 131091, 65537, 1, 131090, 65537, 1, 196626, 65537, 1, 262162, 65537, 1, 327698, 65537, 1, 327699, 65537, 1, 262163, 65537, 1, 196627, 65537, 1, -524292, 65537, 1, -524291, 65537, 1, -524290, 65537, 1, -524289, 65537, 1, -589824, 65537, 1, -589823, 65537, 1, -589812, 65537, 1, -589807, 65537, 1, -589808, 65537, 1, -589809, 65537, 1, -589810, 65537, 1, -589811, 65537, 1, -589806, 65537, 1, -589805, 65537, 1, -589804, 65537, 1, -131083, 65537, 1, -131084, 65537, 1, -131085, 65537, 1, -131086, 65537, 1, -131087, 65537, 1, -131088, 65537, 1, -131089, 65537, 1, -131090, 65537, 1, -196626, 65537, 1, -262162, 65537, 1, -327698, 65537, 1, -393234, 65537, 1, -393233, 65537, 1, -458769, 65537, 1, -458770, 65537, 1, -458768, 65537, 1, -458767, 65537, 1, -458766, 65537, 1, -458765, 65537, 1, -458764, 65537, 1, -393228, 65537, 1, -393227, 65537, 1, -458763, 65537, 1, -393229, 65537, 1, -393230, 65537, 1, -393231, 65537, 1, -327695, 65537, 1, -327696, 65537, 1, -327697, 65537, 1, -262161, 65537, 1, -262160, 65537, 1, -262159, 65537, 1, -262158, 65537, 1, -262157, 65537, 1, -262156, 65537, 1, -196620, 65537, 1, -196621, 65537, 1, -196622, 65537, 1, -196623, 65537, 1, -196624, 65537, 1, -196625, 65537, 1, -262155, 65537, 1, -196619, 65537, 1, -327693, 65537, 1, -327692, 65537, 1, -327691, 65537, 1, -327694, 65537, 1, -393232, 65537, 1, -524299, 65537, 1, -524300, 65537, 1, -524301, 65537, 1, -524302, 65537, 1, -524303, 65537, 1, -524304, 65537, 1, -524305, 65537, 1, -524306, 65537, 1)
layer_1/name = "Walls"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-65539, 131072, 0, -65540, 65536, 0, -65541, 65536, 0, -65542, 65536, 0, -65543, 65536, 0, -65546, 65536, 2, -65545, 65536, 0, -65544, 65536, 0, -131066, 65536, 0, -131062, 65536, 0, -131061, 65536, 0, -131067, 0, 0, -131063, 65536, 1, -65527, 131072, 2, -65529, 65536, 2, -131065, 131072, 1, -65528, 65536, 0, -131060, 65536, 0, -131059, 131072, 1, -65523, 0, 2, 13, 0, 2, 65549, 0, 2, 131085, 0, 2, 196621, 0, 2, 262157, 0, 2, 327693, 0, 2, 393229, 0, 3, -131082, 131072, 1, -131083, 65536, 0, -131084, 65536, 0, -131085, 65536, 0, -131086, 65536, 0, -131087, 65536, 0, -131088, 65536, 0, -131089, 65536, 2, -196625, 0, 2, -262161, 0, 2, -327697, 0, 2, -393233, 0, 2, -458769, 0, 2, -524305, 0, 2, -589841, 0, 2, -393234, 0, 2, -327698, 0, 2, -262162, 0, 2, -196626, 0, 2, -131090, 0, 2, -65554, 0, 2, -18, 131072, 2, 65517, 0, 2, -19, 65536, 1, 131053, 0, 2, 196589, 0, 2, -458770, 0, 2, -524306, 0, 2, -589842, 0, 2, -655378, 65536, 1, -655377, 131072, 1)

[node name="House" parent="Ground" instance=ExtResource("5_ctehp")]
position = Vector2(-5093, 5815)
rotation = -1.5708

[node name="SteamVent" parent="Ground/House" instance=ExtResource("6_2gdpj")]
position = Vector2(5174, 6942)

[node name="Moss1" type="Sprite2D" parent="Ground"]
position = Vector2(-1064, 485)
texture = ExtResource("6_k7ndh")

[node name="Moss11" type="Sprite2D" parent="Ground"]
position = Vector2(5051, -385)
texture = ExtResource("6_k7ndh")

[node name="Moss7" type="Sprite2D" parent="Ground"]
position = Vector2(-3924, -788)
texture = ExtResource("6_k7ndh")

[node name="Moss3" type="Sprite2D" parent="Ground"]
position = Vector2(161, 1183)
texture = ExtResource("7_o2jfq")

[node name="Moss10" type="Sprite2D" parent="Ground"]
position = Vector2(5096, -373)
texture = ExtResource("7_o2jfq")

[node name="Moss6" type="Sprite2D" parent="Ground"]
position = Vector2(4203, -352)
texture = ExtResource("7_o2jfq")

[node name="Moss5" type="Sprite2D" parent="Ground"]
position = Vector2(860, 952)
texture = ExtResource("8_4be6f")

[node name="Moss9" type="Sprite2D" parent="Ground"]
position = Vector2(2385, -377)
texture = ExtResource("8_4be6f")

[node name="Moss4" type="Sprite2D" parent="Ground"]
position = Vector2(1425, 1285)
texture = ExtResource("7_o2jfq")

[node name="Moss8" type="Sprite2D" parent="Ground"]
position = Vector2(5096, 2671)
texture = ExtResource("7_o2jfq")

[node name="Moss2" type="Sprite2D" parent="Ground"]
position = Vector2(184, 768)
texture = ExtResource("9_lqt0k")

[node name="Decoration" type="Sprite2D" parent="Ground"]
modulate = Color(0.996078, 0.866667, 0.772549, 1)
position = Vector2(-1020, 1285)
texture = ExtResource("3_kbdgq")

[node name="Gate" parent="." instance=ExtResource("3_belet")]
position = Vector2(593, -485)

[node name="Projectiles" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("4_8t4p4")]
position = Vector2(557, 544)
speed = 1000.0

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.6, 0.6)
position_smoothing_enabled = true

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
color = Color(0.188235, 0.188235, 0.188235, 1)
blend_mode = 1

[connection signal="player_entered_gate" from="Gate" to="." method="_on_gate_player_entered_gate"]
[connection signal="shoot_grenade" from="Player" to="." method="_on_player_shoot_grenade"]
[connection signal="shoot_laser" from="Player" to="." method="_on_player_shoot_laser"]
